fix some layout issues

--- a/src/app/static/components/avatar/avatar.component.scss
+++ b/src/app/static/components/avatar/avatar.component.scss
@@ -13,3 +13,7 @@
     letter-spacing: .8px;
   }
 }
+
+.avatar-border {
+  border: 3px solid rgba(255, 255, 255, .8);
+}
